k8s/glusterfs-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster 
  namespace: stomp-test
spec:
  ports:
  - port: 1
