k8s/stomp-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stomp-test-ingress
  namespace: stomp-test
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: 40m
    ingress.kubernetes.io/enable-cors: 'true'
    ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  tls:
  - hosts:
    - stomp-test.docker.x1
    secretName: pki-wildfly-secret
  rules:
  - host: stomp-test.docker.x1
    http:
      paths:
      - path: /
        backend:
          serviceName: wildfly
          servicePort: https
